--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,7 @@
         android:layout_marginRight="123dp"
         android:text=""
         android:textColor="#fff"
-        android:textColorHighlight="#fff"
+        android:textColorHighlight="#000"
         android:textColorHint="#fff"
         android:textColorLink="#fff"
         android:textSize="24sp"
@@ -79,7 +79,7 @@
             android:hint="Enter your Email"
             android:inputType="textEmailAddress"
             android:textColor="#fff"
-            android:textColorHighlight="#fff"
+            android:textColorHighlight="#000"
             android:textColorHint="#fff"
             android:textColorLink="#fff" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -105,7 +105,7 @@
 
             android:inputType="textPassword"
             android:textColor="#fff"
-            android:textColorHighlight="#fff"
+            android:textColorHighlight="#000"
             android:textColorHint="#fff"
             android:textColorLink="#fff" />
     </com.google.android.material.textfield.TextInputLayout>
