--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -32,14 +32,34 @@
         android:text="Already Have Account"
         android:textColor="#FFFFFF" />
 
+    <Button
+        android:id="@+id/reg_google"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="34dp"
+        android:background="@drawable/round_btn"
+        android:backgroundTint="@color/cardview_light_background"
+        android:drawableStart="@drawable/ic_google_logo"
+        android:drawableLeft="@drawable/ic_google_logo"
+        android:drawablePadding="5dp"
+        android:padding="10dp"
+        android:text="Sign In with Google"
+        android:textColor="#000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_password" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="218dp"
         android:layout_height="80dp"
         android:layout_below="@+id/imageView2"
         android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="100dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="118dp"
         android:layout_marginTop="68dp"
         android:gravity="center"
         android:text="Welcome to Chit Chat App"
