--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -59,7 +59,8 @@
         android:layout_below="@+id/imageView2"
         android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="118dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="101dp"
         android:layout_marginTop="68dp"
         android:gravity="center"
         android:text="Welcome to Chit Chat App"
