--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -55,6 +55,26 @@
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintTop_toBottomOf="@+id/reg_password" />-->
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/reglogo"
+        android:layout_width="72dp"
+        android:layout_height="54dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginRight="123dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.463"
+        android:padding="2dp"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_app_bar"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="reg.json"
+        app:lottie_loop="true" />
+
     <TextView
         android:id="@+id/login_et1"
         android:layout_width="wrap_content"
