Final Alignment and Fixed Orientation to Portrait

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -58,12 +58,9 @@
         android:id="@+id/textView"
         android:layout_width="218dp"
         android:layout_height="80dp"
-        android:layout_below="@+id/imageView2"
-        android:layout_alignParentStart="true"
-        android:layout_centerInParent="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="68dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="279dp"
         android:gravity="center"
         android:text="Welcome to Chit Chat App"
         android:textColor="#FFFFFF"
